--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
 
+//= template/header.html
+
+<section class="content">
+    Content
+</section>
+
+//= template/footer.html
+
 </body>
 </html>
