--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>YOGA</title>
+    <link href="../build/css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
