--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>YOGA</title>
-    <link href="../build/css/main.css" rel="stylesheet" type="text/css">
+    <link href="./css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
 //= template/header.html
 
 <section class="content">
-    Content
+
 </section>
 
 //= template/footer.html
