--- a/src/index.html
+++ b/src/index.html
@@ -240,7 +240,7 @@
                         <li>ENTRY TIME: 8A.M – 8P.M</li>
                         <li>NUTRITION ADVICER: NO</li>
                     </ul>
-                    <p><a href="#">Buy now</a></p>
+                    <p><a href="#" class="buy-link">Buy now</a></p>
 
                     </div>
 
@@ -255,7 +255,7 @@
                         <li>ENTRY TIME: 8A.M – 8P.M</li>
                         <li>NUTRITION ADVICER: YES</li>
                     </ul>
-                    <p><a href="#">Buy now</a></p>
+                    <p><a href="#" class="buy-link">Buy now</a></p>
                     </div>
                 </div>
                 <div class="block-feature">
@@ -268,7 +268,7 @@
                         <li>ENTRY TIME: 8A.M – 8P.M</li>
                         <li>NUTRITION ADVICER: YES</li>
                     </ul>
-                    <p><a href="#">Buy now</a></p>
+                    <p><a href="#" class="buy-link">Buy now</a></p>
                     </div>
                 </div>
             </div>
